[package]
name = "rust-sniper"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
# Web framework для API
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client для API запросов и SSE
reqwest = { version = "0.11", features = ["json", "stream"] }

# Solana - используем совместимые версии
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"

# SPL Token для работы с токенами
# Используем версии, совместимые с Solana SDK 1.18
spl-token = "3.5"
spl-associated-token-account = "2.3"

# GRPC для Yellowstone
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = "10.1.1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-stream = "0.1"

# Base58 encoding
bs58 = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# Time utilities
chrono = "0.4"

# Bincode для десериализации транзакций
bincode = "1.3"
