[package]
name = "rust-sniper"
version = "0.1.0"
edition = "2021"

# build-dependencies удалены, так как используем yellowstone-grpc-proto напрямую

[dependencies]
# Web framework для API
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client для API запросов и SSE
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Solana - обновлено до версии 2.2 для совместимости с yellowstone-grpc-proto
solana-client = "2.2"
solana-sdk = "2.2"
solana-transaction-status = "2.2"
solana-compute-budget-interface = "2.2"

# SPL Token для работы с токенами
# Используем версии, совместимые с Solana SDK 2.2
spl-token = "5.0"
spl-associated-token-account = "4.0"

# GRPC для Yellowstone
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = "10.1.1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-stream = "0.1"

# Base58 encoding
bs58 = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# Time utilities
chrono = "0.4"

# Bincode для десериализации транзакций
bincode = "1.3"

# Явно указываем zeroize для разрешения конфликтов версий
zeroize = "1.7"

# OpenSSL с vendored feature для автоматической компиляции (не требует установки в системе)
openssl = { version = "0.10", features = ["vendored"] }
