[package]
name = "rust-sniper"
version = "0.1.0"
edition = "2021"

# build-dependencies удалены, так как используем yellowstone-grpc-proto напрямую

[dependencies]
# Web framework для API
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client для API запросов и SSE
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Solana - версия 1.18.26 для совместимости
solana-client = "1.18.26"
solana-sdk = "1.18.26"
solana-transaction-status = "1.18.26"

# SPL Token для работы с токенами
# Используем версии, совместимые с Solana SDK 1.18
spl-token = "4.0"
spl-associated-token-account = "2.3"

# GRPC для Yellowstone
yellowstone-grpc-client = "1.2.0"
yellowstone-grpc-proto = "1.1.1"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-stream = "0.1"

# Base58 encoding
bs58 = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"

# Time utilities
chrono = "0.4"

# Bincode для десериализации транзакций
bincode = "1.3"

# Явно указываем zeroize для разрешения конфликтов версий (точная версия для совместимости с Solana 1.18)
zeroize = "=1.3.0"

# OpenSSL с vendored feature для автоматической компиляции (не требует установки в системе)
openssl = { version = "0.10", features = ["vendored"] }
